# GridCodeManager

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
api/: EnergyServiceManagement.h  GridCode.h  GridServicesManager.h  ServicesDB.h  emsListener.h  event_system.h  logListener.h  measurement.h
config/: gc_config.toml
data/: LFSM-O.csv  LFSM-O.csv.fine
doc/: gc_manager.puml
lib/: ServicesDB.h  ems.h  log.h  service.h
utilities/cpp/: LFSM_O_dataGeneration.cpp
utilities/cpp/utest/: Makefile  fn_interpLFSM.cpp  main.cpp
utilities/python/: LFSM_O_test.py
